--- a/deploymentfiles/deployment.yaml
+++ b/deploymentfiles/deployment.yaml
@@ -23,6 +23,6 @@ spec:
     spec:
       containers:
         - name: fb-pod-cont
-          image: devopshubg333/batch16d:5
+          image: navya150515/batch16d:5
           ports:
             - containerPort: 8080
