--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
@@ -8,26 +9,27 @@
     <version>1.3.0</version>
     <packaging>war</packaging>
 
-	<properties>
-		<docker.image.prefix>kammana</docker.image.prefix>
-		<sonar.host.url>http://3.83.18.215:9000/</sonar.host.url>
+    <properties>
+        <docker.image.prefix>kammana</docker.image.prefix>
+        <sonar.host.url>http://3.83.18.215:9000/</sonar.host.url>
+    </properties>
 
-	</properties>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>NexusRepo</id>
+            <url>http://34.201.119.102:8081/repository/batch16d-repo-snapshot/</url>
+        </snapshotRepository>
 
-	<distributionManagement>
-		 <snapshotRepository>
-		    <id>NexusRepo</id>
-		    <url>http://34.201.119.102:8081/repository/batch16d-repo-snapshot/</url>
-		 </snapshotRepository>
-		
-		<repository>
-		    <id>NexusRepo</id>
-		    <url>http://34.201.119.102:8081/repository/batch16d-repo-release/</url>
-		</repository>
-  	</distributionManagement>
-    
+        <repository>
+            <id>NexusRepo</id>
+            <url>http://34.201.119.102:8081/repository/batch16d-repo-release/</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
+
+            <!-- Existing WAR Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -36,7 +38,16 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+
+            <!-- ✅ Sonar Maven Plugin (Added so mvn sonar:sonar works) -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.10.0.2594</version>
+            </plugin>
+
         </plugins>
     </build>
+
 </project>
 
